@@ -540,7 +540,12 @@ sub PrintHead {
     # Crossref schema info:
     # https://www.crossref.org/documentation/schema-library/schema-versions/
     print OUT <<END;
-<doi_batch xmlns="http://www.crossref.org/schema/5.4.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" version="5.4.0" xsi:schemaLocation="http://www.crossref.org/schema/5.4.0 https://www.crossref.org/schemas/crossref5.4.0.xsd">
+<doi_batch
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    version="5.4.0"
+    xmlns="http://www.crossref.org/schema/5.4.0"
+    xsi:schemaLocation="http://www.crossref.org/schema/5.4.0
+                       https://www.crossref.org/schemas/crossref5.4.0.xsd">
   <head>
     <doi_batch_id>$batchId</doi_batch_id>
     <timestamp>$timestamp</timestamp>
@@ -862,12 +867,29 @@ sub ConvertBibentryToCr {
 
     $result{'citation'} .= ConvertBibFieldToCfield($entry, 'year', 'cYear');
 
-    $result{'citation'} .= ConvertBibFieldToCfield($entry, 'doi');
+    my $doi = $entry->{"doi"};
+    if ($doi) {
+      # Crossref accepts only a bare doi, so remove any leading
+      # https://doi.org/, etc. Complain now if it doesn't match
+      # the regexp the Crossref schema specifies.
+      $doi =~ s,^(https?://)?(dx\.)?doi\.org/,,; 
+      if ($doi !~ m!10\.[0-9]{4,9}/.{1,200}!) { # per crossref schema
+        warn "$0: invalid doi for crossref: $entry->{doi} (-> $doi)\n";
+        warn "$0:   (in title: $entry->{title})\n";
+      }
+      if ($doi ne $entry->{"doi"}) {
+        # If we made any changes to the value, update field value so we
+        # can call the usual routine.
+        $entry->{"doi_orig"} = $entry->{"doi"};
+        $entry->{"doi"} = $doi;
+      }
+      $result{'citation'} .= ConvertBibFieldToCfield($entry, 'doi');
+    }
 
     my $isbn = $entry->{"isbn"};
     if ($isbn) {
         # requirements at
-  # data.crossref.org/reports/help/schema_doc/5.3.1/common5_3_1_xsd.html#isbn_t
+  # data.crossref.org/reports/help/schema_doc/5.4.0/schema_5_4_0.html#http___www.crossref.org_schema_5.4.0_isbn
         my $len = length($isbn);
         if ($len == 9 && $isbn =~ /^\d+$/) {
             # 9-digit standard book number from the 1960s; prepend 0 to
@@ -998,7 +1020,7 @@ END
 ###############################################################
 # Crossref <title> strings can contain a few so-called "face" HTML
 # commands. Complain if they have anything anything else.
-# schema doc: https://data.crossref.org/reports/help/schema_doc/5.3.1/crossref5_3_1_xsd.html#title
+# schema doc: https://data.crossref.org/reports/help/schema_doc/5.4.0/schema_5_4_0.html#title
 #   face doc: https://www.crossref.org/documentation/schema-library/markup-guide-metadata-segments/face-markup/
 # 
 # We don't technically validate the string, e.g., mismatched tags will
@@ -1172,7 +1194,7 @@ END
 
 ##############################################################
 #  Return publication_type attribute for <journal_article>, given $PUBTYPE.
-#  https://data.crossref.org/reports/help/schema_doc/5.3.1/crossref5_3_1_xsd.html#publication_type.atts_publication_type
+#  https://data.crossref.org/reports/help/schema_doc/5.4.0/NO_NAMESPACE.html#publication_type.atts_publication_type
 #  
 #  If not specified in input, return " publication_type=full_text" since
 #  it was hardwired that way before. If set to "omit", return empty
